add config and targets endpoints
